--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,45 +6,45 @@ on:
       - 'charts/**'
 
 jobs:
-#  lint-chart:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#        with:
-#          fetch-depth: 0
-#
-#      - name: Set up Helm
-#        uses: azure/setup-helm@v3
-#        with:
-#          version: v3.10.0
-#
-#      - uses: actions/setup-python@v4
-#        with:
-#          python-version: '3.9'
-#          check-latest: true
-#
-#      - name: Set up chart-testing
-#        uses: helm/chart-testing-action@v2.3.1
-#
-#      - name: Run chart-testing (list-changed)
-#        id: list-changed
-#        run: |
-#          changed=$(ct list-changed --target-branch ${{ github.event.repository.default_branch }})
-#          if [[ -n "$changed" ]]; then
-#            echo "::set-output name=changed::true"
-#          fi
-#
-#      - name: Run chart-testing (lint)
-#        run: ct lint --target-branch ${{ github.event.repository.default_branch }}
-#
-#      - name: Create kind cluster
-#        uses: helm/kind-action@v1.4.0
-#        if: steps.list-changed.outputs.changed == 'true'
-#
-#      - name: Run chart-testing (install)
-#        run: ct install
-#
+  lint-chart:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Set up Helm
+        uses: azure/setup-helm@v3
+        with:
+          version: v3.10.0
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+          check-latest: true
+
+      - name: Set up chart-testing
+        uses: helm/chart-testing-action@v2.3.1
+
+      - name: Run chart-testing (list-changed)
+        id: list-changed
+        run: |
+          changed=$(ct list-changed --target-branch ${{ github.event.repository.default_branch }})
+          if [[ -n "$changed" ]]; then
+            echo "::set-output name=changed::true"
+          fi
+
+      - name: Run chart-testing (lint)
+        run: ct lint --target-branch ${{ github.event.repository.default_branch }}
+
+      - name: Create kind cluster
+        uses: helm/kind-action@v1.4.0
+        if: steps.list-changed.outputs.changed == 'true'
+
+      - name: Run chart-testing (install)
+        run: ct install
+
 #  helm-docs:
 #    runs-on: ubuntu-latest
 #    needs: lint-chart
@@ -59,10 +59,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@master
-#      - name: Run kubeval
-#        uses: instrumenta/kubeval-action@master
-#        with:
-#          files: charts/.
       - name: Run helm-kubeval
         uses: desaintmartin/helm-kubeval-action@master
         with:
