--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,21 +38,21 @@ jobs:
       - name: Run chart-testing (lint)
         run: ct lint --target-branch ${{ github.event.repository.default_branch }}
 
-      - name: Create kind cluster
-        uses: helm/kind-action@v1.4.0
-        if: steps.list-changed.outputs.changed == 'true'
+#      - name: Create kind cluster
+#        uses: helm/kind-action@v1.4.0
+#        if: steps.list-changed.outputs.changed == 'true'
+#
+#      - name: Run chart-testing (install)
+#        run: ct install
 
-      - name: Run chart-testing (install)
-        run: ct install
-
-#  helm-docs:
-#    runs-on: ubuntu-latest
-#    needs: lint-chart
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#      - name: Run helm-docs
-#        run: .github/helm-docs.sh
+  helm-docs:
+    runs-on: ubuntu-latest
+    needs: lint-chart
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Run helm-docs
+        run: .github/helm-docs.sh
 
   helm-kubeval:
     runs-on: ubuntu-latest
