--- a/charts/initial/templates/cm.yaml
+++ b/charts/initial/templates/cm.yaml
@@ -4,6 +4,6 @@ metadata:
   name: initial-cm
   namespace: {{ .Values.initial.namespace }}
   labels:
-    test: "something"
+    test: "something new"
 data:
   greeting: {{ .Values.initial.greeting }}
