--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,6 +25,7 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.5.0
         with:
+          charts_dir: charts/.
           charts_repo_url: https://dvpe-cloud.github.io/wadtfy-custom-components/
         env:
           CR_TOKEN: '${{ secrets.CR_TOKEN }}'
