--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,11 +21,10 @@ jobs:
 
       - name: Install Helm
         uses: azure/setup-helm@v3
+        with:
+          version: v3.10.0
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.5.0
-        with:
-          charts_dir: charts/.
-          charts_repo_url: https://dvpe-cloud.github.io/wadtfy-custom-components/
         env:
           CR_TOKEN: '${{ secrets.CR_TOKEN }}'
