fixed incorrect values reference in compositions

--- a/charts/tenant/templates/external-secret-store/externalsecretstore-composition.yaml
+++ b/charts/tenant/templates/external-secret-store/externalsecretstore-composition.yaml
@@ -43,7 +43,7 @@ spec:
                 name:
                 namespace:
           providerConfigRef:
-            name: {{ .Values.provider.wadtfyK8s }}
+            name: {{ .Values.provider.kubernetes }}
       patches:
         - fromFieldPath: "spec.namespace"
           toFieldPath: "spec.forProvider.manifest.metadata.namespace"
@@ -83,7 +83,7 @@ spec:
                         serviceAccountRef:
                           name:
           providerConfigRef:
-            name: {{ .Values.provider.wadtfyK8s }}
+            name: {{ .Values.provider.kubernetes }}
       patches:
         - fromFieldPath: "spec.namespace"
           toFieldPath: "spec.forProvider.manifest.metadata.namespace"
