--- a/charts/tenant/templates/tenant-composition.yaml
+++ b/charts/tenant/templates/tenant-composition.yaml
@@ -36,7 +36,7 @@ spec:
                 credentials:
                   source: InjectedIdentity
           providerConfigRef:
-            name: {{ $.Values.provider.wadtfyK8s }}
+            name: {{ $.Values.provider.kubernetes }}
       patches:
         - type: ToCompositeFieldPath
           fromFieldPath: "spec.forProvider.manifest.metadata.name"
